{
    "name": "ActionMaps",
    "maps": [
        {
            "name": "Move",
            "id": "1891c1c9-ac70-4aff-b83f-69cd2b8b7289",
            "actions": [
                {
                    "name": "ChangeLanes_R",
                    "type": "Button",
                    "id": "35a37f9a-717b-4f0a-8dac-2d7493c3dd53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeLanes_L",
                    "type": "Button",
                    "id": "2d1116fe-d786-4733-a1d3-9237d01fb216",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Accelerate",
                    "type": "Button",
                    "id": "e06be0ec-3396-4aaa-b1bd-df1d0bab2661",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Decelerate",
                    "type": "Button",
                    "id": "5b0db908-fba8-4bcc-9553-016ab93d8eae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "De_Accelerate",
                    "type": "Value",
                    "id": "eef502e4-264d-492e-94b0-ad417952e7ea",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeLane",
                    "type": "Value",
                    "id": "afbe634c-8a61-40df-bc0a-3dd3f2c163b9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ce55908a-2478-471c-9394-06dea7f75edb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f444ab26-c016-47f5-8cda-24edd167c30c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Decelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18bffcf7-66ba-4f91-ac03-dc33abb436f7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeLanes_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d8cffb0-628a-4dd6-841c-51f1c8cd0a84",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeLanes_L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WS Keyboard",
                    "id": "f38c18b7-d444-4e21-9d39-18be70864133",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "De_Accelerate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8e5f7568-9a3e-49aa-b1db-2b03be0266be",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "De_Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ea52fc5d-2a55-4d88-828f-2c84b69559d3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "De_Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "AD Keyboard",
                    "id": "2238a272-9cbb-49df-9b97-d3f37d4999d3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeLane",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c4017dc8-f139-4130-9b7c-9643759bc226",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeLane",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ed926a39-956c-416e-bdfd-932edeea99d9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeLane",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Menu",
            "id": "49ae8f1c-b810-4c46-9086-8ffd4e92950a",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "2011b49b-3110-48a0-ba37-48e055f925a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "55da0ae4-0e53-41f7-82cd-db4b39748a78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Radio",
                    "type": "Button",
                    "id": "e0e51ccc-9664-43dd-8fbd-4b6c52363d13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4fef1b94-d0bf-4f82-8b5b-5f3f420b479f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2677b42e-d82b-4625-bcaf-b7b73dceb2cc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10e8cf38-039d-4852-b286-401d09e536f9",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Radio",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}